6 July 2017: Wouter
	- Fix tests to use .tdir (from Manu Bretelle) instead of .tpkg.
	- Fix svn hooks for tdir (selected if testcode/mini_tdir.sh exists)..

4 July 2017: Wouter
	- Fix 1332: Bump verbosity of failed chown'ing of the control socket.

3 July 2017: Wouter
	- Fix for unbound-checkconf, check ipsecmod-hook if ipsecmod is turned
	  on.
	- Fix #1331: libunbound segfault in threaded mode when context is
	  deleted.
	- Fix pythonmod link line option flag.
	- Fix openssl 1.1.0 load of ssl error strings from ssl init.

29 June 2017: Wouter
	- Fix python example0 return module wait instead of error for pass.
	- iana portlist update
	- enhancement for hardened-tls for DNS over TLS.  Removed duplicated
	  security settings.

27 June 2017: Wouter
	- Tag 1.6.4 is created with the 1.6.4rc2 contents.
	- Trunk contains 1.6.5, with changes from 26, 27 june.
	- Remove signed unsigned warning from authzone.
	- Fix that infra cache host hash does not change after reconfig.

26 June 2017: Wouter
	- (for 1.6.5)
	  Better fixup of dnscrypt_cert_chacha test for different escapes.
	- First fix for zero b64 and hex text zone format in sldns.
	- unbound-control dump_infra prints port number for address if not 53.

23 June 2017: Wouter
	- (for 1.6.5): fixup of dnscrypt_cert_chacha test (from Manu Bretelle).

22 June 2017: Wouter
	- Tag 1.6.4rc2

22 June 2017: Ralph
	- Added fastrpz patch to contrib

21 June 2017: Wouter
	- Fix #1316: heap read buffer overflow in parse_edns_options.

20 June 2017: Wouter
	- Fix warning in pythonmod under clang compiler.
	- Tag 1.6.4rc1
	- Fix lintian typo.

16 June 2017: Ralph
	- Fix #1277: disable domain ratelimit by setting value to 0.

16 June 2017: Wouter
	- Fix #1301: memory leak in respip and tests.
	- Free callback in edns-subnetmod on exit and restart.
	- Fix memory leak in sldns_buffer_new_frm_data.
	- Fix memory leak in dnscrypt config read.
	- Fix dnscrypt chacha cert support ifdefs.