@@ -1,3 +1,6 @@
+11 July 2017: Wouter
+	- Fix #1344: RFC6761-reserved domains: test. and invalid.
+
 6 July 2017: Wouter
 	- Fix tests to use .tdir (from Manu Bretelle) instead of .tpkg.
 	- Fix svn hooks for tdir (selected if testcode/mini_tdir.sh exists)..
